M       cat_defaults.m
M       cat_main.m
M       cat_run_job.m
M       tbx_cfg_cat.m

(1) Fixed:    Added missed bias variable for PDF report (experimental mode).
(2) New:      Extend surface variable to control the side reconstruction.


------------------------------------------------------------------------
r1087 | gaser | 2016-11-23 13:56:20 +0100 (Mi, 23 Nov 2016) | 19 lines

Changed paths:
M       CHANGES.txt
M       cat_conf_extopts.m
M       cat_defaults.m
M       cat_io_writenii.m
M       cat_run_job.m
M       cat_surf_createCS.m
M       cat_tst_cattest.m
M       cat_vol_pbt.m

(1) Changed: Removed tca and replaced this approach by a local change of 
    intensities for creating the initial surface. In the parahippocampal 
    area the intensity of the ppi image is inceased. This prevents large 
    cuts in that area. In the cortex the ppi intensity is decreased which
    helps in preventing glued gyri/sulci.
(2) Changed: Added two new parameters to control surface creation in 
    cortex and parahippocampal gyrus.
(3) Changed: Typos...

------------------------------------------------------------------------
r1088 | gaser | 2016-11-25 11:33:11 +0100 (Fr, 25 Nov 2016) | 10 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_io_writenii.m
M       html/cat.html
M       tbx_cfg_cat.m

(1) Changed: Interpolation in cat_io_writenii.m was set to previous version.
(2) Fixed: In tbx_cfg_cat.m the expert case argument was wrong.

------------------------------------------------------------------------

Changed paths:
M       CHANGES.txt
M       cat_stat_check_cov.m
M       cat_surf_createCS.m

(1) Changed: Surface deformation was optimized in cat_surf_createCS.m.
(2) Fixed: In cat_stat_check_cov.m comparison of filenames was not correct
    if length was differing (thanks to Raphael Casseb for correcting this
    error).
------------------------------------------------------------------------
r1089 | gaser | 2016-11-30 11:01:04